# ComfyUI-NO8D-controls

./: .comfyignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_LOG.md  README.md  README.zh-CN.md  __init__.py  compare_slider_preview.py  empty_latent.py  generate.py  image_grid.py  image_loader.py  krea_style_selector.py  prompt_config.py  prompt_merge.py  prompt_plus.py  prompt_provider.py  prompt_server.py  pyproject.toml  requirements.txt  save_image_text_dataset.py  slider_lora_lite.py  slider_lora_stack.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-comfy-registry.yml  validate.yml
data/: krea_styles.json
data/krea_style_libraries/: photography.xlsx
examples/: NO8D-Prompt-libraries.json  NO8D-controls-example.json
tests/: test_compare_slider_preview.py  test_generate.py  test_image_grid.py  test_image_loader.py  test_krea_style_selector.py  test_prompt_camera_geometry.py  test_prompt_length.py  test_prompt_merge.py  test_prompt_server.py  test_prompt_style_presets.py  test_prompt_view.py
web/: compare_slider_preview.js  empty_latent_i18n.js  generate.js  image_loader_i18n.js  krea_style_gallery.js  no8d_bypass.js  no8d_comfy_events.js  no8d_i18n.js  no8d_ui_theme.js  node_titles_i18n.js  prompt_plus_i18n.js  prompt_settings.js  prompt_view.js  save_i18n.js  slider_lora_lite.js  slider_lora_stack.js
