[project]
name = "no8d-controls"
description = "NO8D custom nodes for LoRA stacking, prompt generation, image loading, generation and masking, style selection, image comparison and composition, and dataset saving in ComfyUI."
version = "1.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["json-repair>=0.61,<1"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/no8d/ComfyUI-NO8D-controls"
Issues = "https://github.com/no8d/ComfyUI-NO8D-controls/issues"

[tool.comfy]
PublisherId = "no8day"
DisplayName = "NO8D-controls"
Icon = "https://raw.githubusercontent.com/no8d/ComfyUI-NO8D-controls/main/docs/images/no8d-icon.png"
Banner = "https://raw.githubusercontent.com/no8d/ComfyUI-NO8D-controls/main/docs/images/no8d-banner-registry.jpg"
